Storing submitted sample information in database
Sample information including runTime, guestImage, id is stored in database after user querying the submit api endpoint is authorized. Sample submission id is response of the api endpoint.
